# subCMake

./: CMakeLists.txt  main.cpp  readme.md
app/: CMakeLists.txt  winTree.cpp  winTree.h
lib_head/: hello.h  lib1.h
public/: CMakeLists.txt  Tree.cpp  Tree.h  head.h
